Make the class SolrSchemaAndConfigUpgrader.java only run once.